//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk, note: 'The unique identifier for the user.
@default {Generated by database}
@zod.id']
  name String [not null, note: '@zod.email()']
  email String [unique, not null]
  password String [not null, note: '@zod.min(6)']
  role UserRole [not null, default: 'USER']
  photo String
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table tayartaws {
  id String [pk]
  title String [not null]
  cover String [not null]
  path String [not null]
  description String [not null]
  Sayartaw sayartaws
  sayartawId String
  categories categories [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table sayartaws {
  id String [pk]
  name String [not null]
  cover String [not null]
  bio String [not null]
  tayartaws tayartaws [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table categories {
  id String [pk]
  originalImage String [not null]
  thumbnailImage String [not null]
  name String [not null]
  parentId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  tayartaws tayartaws [not null]
}

Table blogs {
  id String [pk]
  title String [not null]
  cover String [not null]
  slug String [unique, not null]
  markdown String [not null]
  content String [not null]
  rendered_markdown String [not null]
  isPublished Boolean [not null, default: false]
  categories blog_categories [not null]
  publishedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table blog_categories {
  id String [pk]
  name String [not null]
  slug String [unique, not null]
  posts blogs [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table CategoryToTayartaw {
  categoriesId String [ref: > categories.id]
  tayartawsId String [ref: > tayartaws.id]
}

Table BlogToBlogCategory {
  categoriesId String [ref: > blog_categories.id]
  postsId String [ref: > blogs.id]
}

Enum UserRole {
  ADMIN
  EDITOR
  USER
}

Ref: tayartaws.sayartawId > sayartaws.id